fix css z-index bug 2

--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@
   position: absolute;
   height: 3800px;
   top: 388px;
-  z-index: 1;
+  z-index: -1;
 }
 
 #azum {
